# wgpu-engine

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  todo.md
cad/: Cargo.toml  LIMITATIONS.md
cad/examples/boolean/: main.rs
cad/src/: edge.rs  lib.rs  scene_map.rs  tessellation.rs
core/: Cargo.toml
core/examples/egui-basic/: main.rs  ui.rs
core/examples/materials/: main.rs
core/src/: annotation.rs  camera.rs  common.rs  drawstate.rs  egui_support.rs  event.rs  gltf.rs  ibl.rs  lib.rs  operator.rs  renderer.rs  scene.rs  selection.rs  shaders.rs  todo.md  viewer.rs  web.rs
core/src/common/: plane.rs
core/src/egui_support/: app.rs
core/src/geom_query/: pick_query.rs  volume_picking.rs
core/src/ibl/: brdf_lut.rs  cubemap.rs  equirect.rs  hdr_loader.rs  prefilter.rs
core/src/operator/: navigation.rs  selection.rs  transform.rs  walk.rs
core/src/renderer/: batching.rs  gpu_resources.rs  outline.rs  pipeline.rs  prepare.rs  types.rs
core/src/renderer/gpu_resources/: buffer_layouts.rs  renderer_resources.rs  state.rs  texture_helpers.rs  uniforms.rs
core/src/scene/: annotation.rs  batch.rs  format.rs  instance.rs  light.rs  material.rs  mesh.rs  node.rs  texture.rs  tree.rs
core/src/shaders/: camera.wesl  common.wesl  constants.wesl  fragment_color_lit.wesl  fragment_pbr_lit.wesl  ibl.wesl  lighting.wesl  main.wesl  material_pbr.wesl  material_texture.wesl  normal_mapping.wesl  outline.wesl  outline_screenspace.wesl  pbr.wesl  vertex.wesl
core/src/shaders/ibl/: brdf_lut.wgsl  irradiance.wgsl  prefilter.wgsl
duck/: Cargo.toml
duck/cad/: Cargo.toml  LIMITATIONS.md
duck/cad/src/: import.rs  lib.rs  model.rs  shape.rs  tessellate.rs  wire.rs
duck/common/: Cargo.toml
duck/common/src/: aabb.rs  convex_polyhedron.rs  lib.rs  plane.rs  ray.rs  transform.rs  transform_ops.rs
duck/egui-demo/: Cargo.toml  index.html
duck/egui-demo/src/: io.rs  main.rs  platform.rs  ui.rs
duck/egui-demo/src/io/: native.rs  web.rs
duck/egui-demo/src/platform/: native.rs  web.rs
duck/egui-demo/src/ui/: environment_tab.rs  info_sections.rs  left_panel.rs  lights_tab.rs  network_tab.rs  right_panel.rs  scene_tab.rs
duck/import-export/: Cargo.toml
duck/import-export/benches/: import_export.rs
duck/import-export/src/: assimp.rs  cad.rs  format.rs  gltf.rs  importer.rs  lib.rs  usd.rs
duck/import-export/src/format/: tests.rs  wire.rs
duck/modeler/: Cargo.toml
duck/modeler/src/: boolean.rs  cursor.rs  document.rs  extrude.rs  grid.rs  loft.rs  main.rs  operators.rs  part_map.rs  preview.rs  snap.rs  sphere_op.rs  tool.rs  tool_manager.rs  ui.rs
duck/modeler/src/operators/: boolean.rs  box.rs  circle.rs  curve.rs  cylinder.rs  extrude.rs  line.rs  loft.rs  rectangle.rs  sphere.rs  transform.rs
duck/modeler/src/snap/: providers.rs
duck/modeler/src/ui/: icons.rs  right_panel.rs  (+3 more)
duck/render-core/: Cargo.toml
duck/render-core/src/: gen_cache.rs  gpu.rs  host.rs  lib.rs  pipeline_cache.rs  readback.rs  shader.rs  targets.rs  texture.rs  workflow.rs
duck/renderer/: Cargo.toml  build.rs
duck/renderer/examples/: gooch.rs  gooch.wesl  gooch.wgsl  material_variants.rs  shaded.rs
duck/renderer/src/: abi.rs  highlight_query.rs  ibl.rs  lib.rs  renderer.rs  selection_query.rs  shaders.rs
duck/scene/: Cargo.toml
duck/scene-converter/: Cargo.toml
duck/scene-converter/src/: main.rs
duck/scene-info/: Cargo.toml
duck/scene-info/src/: main.rs
duck/scene-server/: Cargo.toml
duck/scene-server/src/: main.rs
duck/scene/src/: annotation.rs  cad.rs  camera.rs  display.rs  environment.rs  event.rs  geom_query.rs  gizmo.rs  id.rs  instance.rs  lib.rs  light.rs  material.rs  mesh.rs  node.rs  scene_tests.rs  sub_view.rs  texture.rs  view.rs
duck/streaming/: Cargo.toml
duck/streaming/src/: apply.rs  client.rs  codec.rs  lib.rs  priority.rs  server.rs  transport.rs
duck/truck-experiment/: Cargo.toml
duck/truck-experiment/src/: face.rs  lib.rs  scene_map.rs  tessellation.rs  tests.rs
duck/viewer/: Cargo.toml
duck/viewer/src/: bindings.rs  egui_support.rs  event.rs  gizmo.rs  input.rs  lib.rs  operator.rs  scene_scale.rs  selection.rs  streaming.rs  viewer.rs  web.rs  winit_support.rs
duck/web-demo/: index.html  package-lock.json  vite.config.ts
duck/web-demo/public/: default-scene.wgsc
duck/web-demo/src/: App.css  App.tsx
egui-demo/: Cargo.toml
egui-demo/src/: main.rs  ui.rs
egui-demo/src/ui/: environment_tab.rs  info_sections.rs  left_panel.rs  scene_tab.rs
gltf-viewer/: Cargo.toml  Trunk.toml  gen-debug-wasm.sh  index.html
gltf-viewer/src/: app.rs  main.rs  ui.rs
import-export/: Cargo.toml
import-export/benches/: import_export.rs
import-export/src/: assimp.rs  format.rs  gltf.rs  importer.rs  lib.rs  mesh_util.rs  usd.rs
renderer/: Cargo.toml  build.rs
renderer/src/: ibl.rs  lib.rs  renderer.rs  shaders.rs
renderer/src/ibl/: brdf_lut.rs  cubemap.rs  equirect.rs  irradiance.rs  prefilter.rs
renderer/src/renderer/: batching.rs  gpu_resources.rs  pipeline.rs
renderer/src/shaders/: constants.wesl  fragment_pbr_lit.wesl  ibl.wesl  lighting.wesl  main.wesl
scene/: Cargo.toml
scene-converter/: Cargo.toml
scene-converter/src/: main.rs
scene/src/: annotation.rs  assimp.rs  camera.rs  common.rs  coordinate_space.rs  environment.rs  format.rs  geom_query.rs  gizmo.rs  gltf.rs  import_export.rs  instance.rs  lib.rs  light.rs  loader.rs  material.rs  mesh.rs  mesh_util.rs  node.rs  scene.rs  scene_tests.rs  texture.rs  tree.rs
scene/src/common/: aabb.rs  ray.rs  transform_ops.rs
scene/src/geom_query/: pick_query.rs  ray_picking.rs  volume_picking.rs
scene/src/import_export/: assimp.rs  format.rs  gltf.rs  mesh_util.rs  usd.rs
scene/src/mesh/: primitives.rs
scene/src/scene/: batch.rs  mesh.rs  tree.rs
viewer/: Cargo.toml
viewer/examples/materials/: main.rs
viewer/examples/winit-basic/: main.rs
viewer/src/: egui_support.rs  input.rs  lib.rs  operator.rs  scene_scale.rs  selection.rs  viewer.rs
viewer/src/egui_support/: app.rs
viewer/src/operator/: selection.rs  transform.rs
(+183 files in other folders)
