[package]
name = "wgpu-engine"
version = "0.1.0"
edition = "2021"

# Define that this package provides both a library and a binary
[lib]
name = "wgpu_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "wgpu-engine"
path = "src/main.rs"

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}