[package]
name = "wgpu-engine"
version = "0.1.0"
edition = "2024"


[lib]
name = "wgpu_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[[example]]
name = "winit"
path = "examples/winit-basic/main.rs"
required-features = ["winit-support"]

[[example]]
name = "egui"
path = "examples/egui-basic/main.rs"
required-features = ["winit-support"]


[features]
winit-support = ["winit"]


[dependencies]
winit = { version = "0.30", features = [ "android-native-activity" ], optional = true}
env_logger = "0.10"
log = "0.4"
wgpu = "27.0"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
obj-rs = "0.7"
gltf = { version = "1.4", features = [ "utils" ]}
wesl = "0.2.0"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[dev-dependencies]
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
