[package]
name = "wgpu-engine"
version = "0.1.0"
edition = "2024"


[lib]
name = "wgpu_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[[example]]
name = "winit"
path = "examples/winit-basic/main.rs"
required-features = ["winit-support"]

[[example]]
name = "egui"
path = "examples/egui-basic/main.rs"
required-features = ["egui-support"]


[features]
winit-support = ["winit"]
egui-support = ["winit-support", "egui", "egui-wgpu", "egui-winit"]
assimp = ["wgpu-engine-scene/assimp"]
usd = ["wgpu-engine-scene/usd"]


# Shared dependencies
[dependencies]
wgpu-engine-scene = { path = "../scene" }
anyhow = "1.0"
bincode = "1.3"
bitflags = "2.0"
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
env_logger = "0.10"
gltf = { version = "1.4", features = ["utils"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
obj-rs = "0.7"
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
web-time = "1"
wesl = "0.2.0"
wgpu = "27.0"
winit = { version = "0.30", features = ["android-native-activity"], optional = true }
zstd = "0.13"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.33", optional = true }
rayon = "1.10"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
egui-winit = { version = "0.33", optional = true, default-features = false, features = ["links"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
wgpu = { version = "27.0", features = ["webgl"] }

[dev-dependencies]
rfd = "0.15"
