[workspace]
resolver = "3"
members = [
    "renderer",
    "viewer",
    "scene",
    "common",
    "import-export",
    "egui-demo",
    "scene-info",
    "scene-converter",
    "cad"
]
default-members = ["viewer"]


[profile.small]
inherits = "release"
opt-level = "s"
strip = true
lto = true
codegen-units = 1
