[workspace]
resolver = "3"
members = [
    "renderer",
    "viewer",
    "scene",
    "common",
    "import-export",
    "egui-demo",
    "modeler",
    "scene-info",
    "scene-converter",
    "cad",
    "streaming",
    "scene-server",
]
default-members = ["viewer"]


[profile.small]
inherits = "release"
opt-level = "s"
strip = true
lto = true
codegen-units = 1
