[package]
name = "egui-demo"
version = "0.1.0"
edition = "2024"

[features]
assimp = ["wgpu-engine-viewer/assimp"]
usd = ["wgpu-engine-viewer/usd"]

[dependencies]
wgpu-engine-viewer = { path = "../viewer", features = ["egui-support"] }
cgmath = "0.18"
egui = "0.33"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
rfd = "0.15"
winit = "0.30"
