[package]
name = "gltf-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu-engine = { path = "../core", features = ["egui-support"] }
cgmath = "0.18"
log = "0.4"
egui = "0.33"
winit = "0.30"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"
rfd = "0.15"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Event",
    "ProgressEvent",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "DragEvent",
    "DataTransfer",
] }
