[package]
name = "wgpu-engine-import-export"
version = "0.1.0"
edition = "2024"

[features]
default = []
assimp = ["dep:russimp"]
usd = ["dep:openusd", "dep:zip"]

[dependencies]
wgpu-engine-scene = { path = "../scene", features = ["serde"] }
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
gltf = { version = "1.4", features = ["utils", "KHR_materials_transmission"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
zstd = "0.13"

# Optional format loaders
russimp = { version = "3", features = ["prebuilt"], optional = true }
openusd = { version = "0.1", optional = true }
zip = { version = "8", optional = true, default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "import_export"
harness = false
