[package]
name = "wgpu-engine-renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "wgpu_engine_renderer"
path = "src/lib.rs"

[dependencies]
wgpu-engine-scene = { path = "../scene" }
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
wesl = "0.2.0"
wgpu = "27.0"
