[package]
name = "wgpu-engine-scene"
version = "0.1.0"
edition = "2024"

[features]
default = []
assimp = ["dep:russimp"]
usd = ["dep:openusd", "dep:zip"]

[dependencies]
russimp = { version = "3", features = ["prebuilt"], optional = true }
openusd = { version = "0.1", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
wgpu-engine-common = { path = "../common" }
anyhow = "1.0"
bincode = "1.3"
bitflags = "2.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
gltf = { version = "1.4", features = ["utils"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
obj-rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
zstd = "0.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
