[package]
name = "wgpu-engine-viewer"
version = "0.1.0"
edition = "2024"


[lib]
name = "wgpu_engine_viewer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


[[example]]
name = "winit"
path = "examples/winit-basic/main.rs"
required-features = ["winit-support"]

[[example]]
name = "materials"
path = "examples/materials/main.rs"
required-features = ["winit-support"]


[features]
winit-support = ["winit"]
egui-support = ["winit-support", "egui", "egui-wgpu", "egui-winit"]
assimp = ["wgpu-engine-import-export/assimp"]
usd = ["wgpu-engine-import-export/usd"]


# Shared dependencies
[dependencies]
wgpu-engine-renderer = { path = "../renderer" }
wgpu-engine-scene = { path = "../scene" }
wgpu-engine-import-export = { path = "../import-export" }
anyhow = "1.0"
bitflags = "2.0"
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18"
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.4"
thiserror = "2.0"
web-time = "1"
wesl = "0.3.2"
wgpu = "27.0"
winit = { version = "0.30", features = ["android-native-activity"], optional = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.33", optional = true }
rayon = "1.10"

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
egui-winit = { version = "0.33", optional = true, default-features = false, features = ["links"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
wgpu = { version = "27.0", features = ["webgl"] }

