[package]
name = "egui-demo"
version = "0.1.0"
edition = "2024"

[features]
assimp = ["duck-engine-viewer/assimp"]
cad = ["duck-engine-viewer/cad"]
usd = ["duck-engine-viewer/usd"]

[dependencies]
duck-engine-viewer = { path = "../viewer", features = ["egui-support"] }
cgmath = "0.18"
egui = "0.33"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
rfd = "0.17"
winit = "0.30"
