[package]
name = "egui-demo"
version = "0.1.0"
edition = "2024"

[features]
assimp = ["duck-engine-viewer/assimp"]
cad = ["duck-engine-viewer/cad"]
usd = ["duck-engine-viewer/usd"]
streaming = ["duck-engine-viewer/streaming"]

[dependencies]
duck-engine-common = { path = "../common" }
duck-engine-viewer = { path = "../viewer", features = ["winit-support"] }
egui = "0.33"
egui-wgpu = "0.33"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
rfd = "0.17"
winit = "0.30"
wgpu = "27.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.33"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.33", default-features = false, features = ["links"] }
