[package]
name = "modeler"
version = "0.1.0"
edition = "2024"

[dependencies]
duck-engine-common = { path = "../common" }
duck-engine-scene = { path = "../scene", features = ["cad"] }
duck-engine-viewer = { path = "../viewer", features = ["winit-support"] }
opencascade = { path = "../../third-party/opencascade-rs/crates/opencascade" }
glam = "0.24"
anyhow = "1"
bitflags = "2.0"
egui = "0.33"
egui-wgpu = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
wgpu = "27.0"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.33"
