[package]
name = "duck-engine-renderer"
version = "0.1.0"
edition = "2024"

[lib]
name = "duck_engine_renderer"
path = "src/lib.rs"

[dependencies]
duck-engine-scene = { path = "../scene" }
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
wesl = "0.3.2"
half = "2.7"
wgpu = "27.0"

[dev-dependencies]
pollster = "0.3"
