[package]
name = "scene-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
duck-engine-scene = { path = "../scene" }
duck-engine-import-export = { path = "../import-export" }
duck-engine-renderer = { path = "../renderer" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
image = { version = "0.25", default-features = false }
pollster = "0.4"
