[package]
name = "scene-info"
version = "0.1.0"
edition = "2024"

[dependencies]
duck-engine-scene = { path = "../scene" }
duck-engine-import-export = { path = "../import-export" }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = "1.0"
zstd = "0.13"
