[package]
name = "scene-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scene-server"
path = "src/main.rs"

[dependencies]
duck-engine-streaming     = { path = "../streaming" }
duck-engine-import-export = { path = "../import-export" }
anyhow     = "1.0"
clap       = { version = "4", features = ["derive"] }
env_logger = "0.11"
log        = "0.4"
