[package]
name = "duck-engine-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
duck-engine-scene = { path = "../scene", features = ["serde"] }
duck-engine-import-export = { path = "../import-export" }
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
zstd = "0.13"
log = "0.4"
cgmath = "0.18"
