[package]
name = "duck-engine-truck-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
duck-engine-scene = { path = "../scene" }
duck-engine-common = { path = "../common" }
truck-modeling = "0.6"
truck-meshalgo = "0.4"
truck-polymesh = "0.6"
truck-shapeops = "0.4"
anyhow = "1.0"
cgmath = "0.18"

[[example]]
name = "brep"
path = "examples/brep/main.rs"

[[example]]
name = "boolean"
path = "examples/boolean/main.rs"

[dev-dependencies]
duck-engine-viewer = { path = "../viewer", features = ["winit-support"] }
winit = "0.30"
pollster = "0.3"
env_logger = "0.10"
